--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "css-loader": "^0.28.11",
+    "echarts": "^4.1.0",
     "element": "^0.1.4",
     "element-ui": "^2.3.7",
+    "font-awesome": "^4.7.0",
+    "less-loader": "^4.1.0",
+    "style-loader": "^0.21.0",
     "supervisor": "^0.12.0",
     "vue": "^2.3.3",
     "vue-router": "^3.0.1",
@@ -30,7 +35,6 @@
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
