--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "element-ui": "^2.3.7",
     "font-awesome": "^4.7.0",
     "less-loader": "^4.1.0",
+    "node-sass": "^4.9.2",
     "style-loader": "^0.21.0",
     "supervisor": "^0.12.0",
     "vue": "^2.3.3",
@@ -47,6 +48,8 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
+    "sass-loader": "^7.0.3",
+    "sass-resources-loader": "^1.3.3",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
