--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "css-loader": "^0.28.11",
     "echarts": "^4.1.0",
     "element": "^0.1.4",
-    "element-ui": "^2.3.7",
+    "element-ui": "^2.4.6",
     "font-awesome": "^4.7.0",
     "less-loader": "^4.1.0",
     "node-sass": "^4.9.2",
     "style-loader": "^0.21.0",
     "supervisor": "^0.12.0",
+    "tween.js": "^16.6.0",
     "vue": "^2.3.3",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
