--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "style-loader": "^0.21.0",
     "supervisor": "^0.12.0",
     "tween.js": "^16.6.0",
+    "vis": "^4.21.0",
     "vue": "^2.3.3",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
