--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-plugin-component": "^1.1.1",
     "css-loader": "^0.28.11",
     "echarts": "^4.1.0",
     "element": "^0.1.4",
     "element-ui": "^2.4.6",
     "font-awesome": "^4.7.0",
+    "js-cookie": "^2.2.0",
     "less-loader": "^4.1.0",
     "mockjs": "^1.0.1-beta3",
     "node-sass": "^4.9.2",
@@ -24,6 +26,8 @@
     "tween.js": "^16.6.0",
     "vis": "^4.21.0",
     "vue": "^2.3.3",
+    "vue-awesome-swiper": "^3.1.3",
+    "vue-count-to": "^1.0.13",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
