--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "analyz": "set NODE_ENV=production && set npm_config_report=true && npm run dist"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -21,7 +22,6 @@
     "mockjs": "^1.0.1-beta3",
     "node-sass": "^4.9.2",
     "style-loader": "^0.21.0",
-    "vis": "^4.21.0",
     "vue": "^2.3.3",
     "vue-count-to": "^1.0.13",
     "vue-router": "^3.0.1",
@@ -38,6 +38,7 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.0.1",
+    "compression-webpack-plugin": "^1.1.12",
     "copy-webpack-plugin": "^4.0.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
