--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mockjs": "^1.0.1-beta3",
     "node-sass": "^4.9.2",
     "style-loader": "^0.21.0",
+    "vis": "^4.21.0",
     "vue": "^2.3.3",
     "vue-count-to": "^1.0.13",
     "vue-router": "^3.0.1",
